@@ -213,7 +213,7 @@
           <item>
            <widget class="QLabel" name="label">
             <property name="text">
-             <string>Output</string>
+             <string>Current Run</string>
             </property>
            </widget>
           </item>
@@ -227,6 +227,13 @@
             </property>
             <property name="text">
              <string>spectra</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="selectRunButton">
+            <property name="text">
+             <string>Runs</string>
             </property>
            </widget>
           </item>
